--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "nidaqmx>=1.0.2",
     "numpy>=2.2.2",
     "opencv-python>=4.11.0.86",
+    "pandas>=2.2.3",
     "pydaqmx>=1.4.6",
     "pyqt6>=6.8.1",
     "pyqtgraph>=0.13.7",
